fix menu on mobile

--- a/themes/leeboonstra/design/src/sass/_gridsystem.scss
+++ b/themes/leeboonstra/design/src/sass/_gridsystem.scss
@@ -66,6 +66,29 @@
         margin-top: 60px;
     }
     
+
+    .navbar {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 60px;
+      }
+      
+      .navbar a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
+
  }
 @include media-breakpoint-up(sm) { 
     .card {
@@ -134,6 +157,29 @@
         max-width: 100%;
         flex: 0 0 100%
     }
+
+
+    .navbar {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 60px;
+      }
+      
+      .navbar a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
  }
 @include media-breakpoint-up(md) { 
     footer .col {
