--- a/themes/leeboonstra/design/src/sass/main.scss
+++ b/themes/leeboonstra/design/src/sass/main.scss
@@ -111,7 +111,7 @@ header {
             margin-left: 0;
             margin-bottom: 5px;
             padding: .25rem !important;
-            background: $primary;
+            background: #000;
             border-radius: 1px;
             margin: 4px;
         }
